Adds example of image and latex inline

--- a/_posts/2024-12-21-example.html
+++ b/_posts/2024-12-21-example.html
@@ -152,7 +152,18 @@ Hence, the vector size is \(T + 4 * C + O + 1\), denoted as \(L\).
 <div class="outline-text-3" id="text-org69490a3">
 <p>
 They are doing the same thing but with a nice interface.
+\[ \frac{1}{2} = x^2 + y_i\]
+this is an example of latex inline \(x = \frac{1}{2}\)
 </p>
+
+<p>
+this is an example of an image
+</p>
+
+<div id="org10a2c14" class="figure">
+<p><img src="images/2024-12-21_23-32-35_screenshot.png" alt="2024-12-21_23-32-35_screenshot.png" />
+</p>
+</div>
 </div>
 </div>
 <div id="outline-container-org174855f" class="outline-3">
