--- a/_posts/2024-12-21-example.html
+++ b/_posts/2024-12-21-example.html
@@ -161,7 +161,7 @@ this is an example of an image
 </p>
 
 <div id="org10a2c14" class="figure">
-<p><img src="{{ '../images/2024-12-21_23-32-35_screenshot.png' | relative_url" alt="2024-12-21_23-32-35_screenshot.png" />
+<p><img src="{{ '../images/2024-12-21_23-32-35_screenshot.png' | relative_url }}" alt="2024-12-21_23-32-35_screenshot.png" />
 </p>
 </div>
 </div>
