Fix google scholar

--- a/_posts/2024-12-21-example.html
+++ b/_posts/2024-12-21-example.html
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "Blogging with Emacs, Org, and GitHub Pages"
+title: "Example blog"
 permalink: /:title/
-tags: [emacs]
+tags: [test] [another_test]
 ---
 <div id="outline-container-orgf08b5ec" class="outline-2">
 <h2 id="orgf08b5ec">Limitations</h2>
@@ -68,7 +68,7 @@ It uses the same underlying architecture.
 <div class="outline-text-3" id="text-org0e1fa42">
 <p>
 We add support for DISTINCT, AND, OR and NOT. There is no support for EXISTS. But understandably so.
-This paper has the same underlying architecture.
+This paper has the same underlying architecture
 </p>
 
 <p>
@@ -157,13 +157,11 @@ this is an example of latex inline \(x = \frac{1}{2}\)
 </p>
 
 <p>
-this is an example of an image
+this is an example of an images
 </p>
-
-<div id="org10a2c14" class="figure">
-<p><img src="{{ '../images/2024-12-21_23-32-35_screenshot.png' | relative_url }}" alt="2024-12-21_23-32-35_screenshot.png" />
+<p>
+<a href="images/2024-12-21_23-32-35_screenshot.png">images/2024-12-21_23-32-35_screenshot.png</a>
 </p>
-</div>
 </div>
 </div>
 <div id="outline-container-org174855f" class="outline-3">
