Fixes tag issue

--- a/_posts/2024-12-21-example.html
+++ b/_posts/2024-12-21-example.html
@@ -2,7 +2,7 @@
 layout: post
 title: "Example blog"
 permalink: /:title/
-tags: [test] [another_test]
+tags: [test, another test, databases]
 ---
 <div id="outline-container-orgf08b5ec" class="outline-2">
 <h2 id="orgf08b5ec">Limitations</h2>
