Try to fix image/image in images url

--- a/_posts/2024-12-22-example_blog.html
+++ b/_posts/2024-12-22-example_blog.html
@@ -11,7 +11,7 @@ tags: [test, another test, databases]
 <li>Only work for a small amount of joins.
 <ol class="org-ol">
 <li>The architecture only allows for two joins.</li>
-<li>The error increases dramatically with consecutive joins</li>
+<li>The error increases dramatically with consecutive joins.</li>
 </ol></li>
 <li>Working with sampling is good until you hit 0 and you are infinitely wrong.
 <ol class="org-ol">
@@ -161,9 +161,9 @@ this is an example of an images
 </p>
 
 
-<div id="org4399132" class="figure">
+<div id="orgeec3d6d" class="figure">
 <p><div class="figure">
-<p><img src="{{ '../org/images/images/2024-12-22_17-10-37_screenshot.png' | relative_url }}" alt="2024-12-22_17-10-37_screenshot.png" /></p>
+<p><img src="{{ '../org/images/2024-12-22_17-10-37_screenshot.png' | relative_url }}" alt="2024-12-22_17-10-37_screenshot.png" /></p>
 </div>
 </p>
 </div>
