Try to make table of content

--- a/_posts/2024-12-22-example_blog.html
+++ b/_posts/2024-12-22-example_blog.html
@@ -161,7 +161,7 @@ this is an example of an images
 </p>
 
 
-<div id="org905af08" class="figure">
+<div id="orge3faff5" class="figure">
 <p><div class="figure">
 <p><img src="{{ '../org/images/2024-12-22_17-10-37_screenshot.png' | relative_url }}" alt="2024-12-22_17-10-37_screenshot.png" /></p>
 </div>
@@ -173,7 +173,7 @@ this is an example of an images
 <h3 id="org3b323db">Learning State Representations for Query Optimization</h3>
 <div class="outline-text-3" id="text-org3b323db">
 <p>
-A neural network, called NNST, is used to learn a state transition function that updates the state representation as query operations are applied. Another function, NNObserved, maps this representation to predict cardinality values.
+A neural network, called NNST, is used to learn a state transition function that updates the state representation as query operations are applied. Another function, NNObserved, maps this representation to predict cardinality values. s..
 </p>
 </div>
 </div>
