--- a/_posts/2024-12-22-example_blog.html
+++ b/_posts/2024-12-22-example_blog.html
@@ -179,7 +179,7 @@ this is an example of an images
 </p>
 
 
-<div id="org33c577e" class="figure">
+<div id="org4c99e13" class="figure">
 <p><div class="figure">
 <p><img src="{{ '../org/images/2024-12-22_17-10-37_screenshot.png' | relative_url }}" alt="2024-12-22_17-10-37_screenshot.png" /></p>
 </div>
