--- a/_posts/2024-12-22-about_me.html
+++ b/_posts/2024-12-22-about_me.html
@@ -9,17 +9,17 @@ tags: [test, another test, databases]
 <p>
 I am a mathematician and computer scientist from Colombia that is currently making his graduate studies in Paris.
 </p>
-<div id="outline-container-org4cfb5ec" class="outline-2">
-<h2 id="org4cfb5ec">Interests</h2>
-<div class="outline-text-2" id="text-org4cfb5ec">
+<div id="outline-container-org6619564" class="outline-1">
+<h1 id="org6619564">Interests</h1>
+<div class="outline-text-1" id="text-org6619564">
 <p>
 I am mainly interested in databases.
 </p>
 </div>
 </div>
-<div id="outline-container-org8266b78" class="outline-2">
-<h2 id="org8266b78">Work experience</h2>
-<div class="outline-text-2" id="text-org8266b78">
+<div id="outline-container-orgf4d6018" class="outline-1">
+<h1 id="orgf4d6018">Work experience</h1>
+<div class="outline-text-1" id="text-orgf4d6018">
 <p>
 I have worked in Data science projects for some years while I was doing my undergraduate degree. I was working closely with the COMBIOS lab.
 </p>
@@ -29,34 +29,34 @@ I worked for almost two years at Instaleap as a Machine Learning Engineer.
 </p>
 </div>
 </div>
-<div id="outline-container-org4a72379" class="outline-2">
-<h2 id="org4a72379">Education</h2>
-<div class="outline-text-2" id="text-org4a72379">
+<div id="outline-container-orgd3ef630" class="outline-1">
+<h1 id="orgd3ef630">Education</h1>
+<div class="outline-text-1" id="text-orgd3ef630">
 </div>
-<div id="outline-container-org25b738f" class="outline-3">
-<h3 id="org25b738f">Bachelor</h3>
-<div class="outline-text-3" id="text-org25b738f">
+<div id="outline-container-org3ee7b8f" class="outline-2">
+<h2 id="org3ee7b8f">Bachelor</h2>
+<div class="outline-text-2" id="text-org3ee7b8f">
 <p>
 I did a double degree of Mathematics and Computer Science in the Universidad Nacional de Colombia from 2016 to 2021.
 </p>
 </div>
 </div>
-<div id="outline-container-org6e13598" class="outline-3">
-<h3 id="org6e13598">Masters</h3>
-<div class="outline-text-3" id="text-org6e13598">
+<div id="outline-container-orgc2757d4" class="outline-2">
+<h2 id="orgc2757d4">Masters</h2>
+<div class="outline-text-2" id="text-orgc2757d4">
 <p>
 I am currently doing an Erasmus+ for a masters degree in Big Data Management and Analytics.
 </p>
 </div>
 </div>
 </div>
-<div id="outline-container-org38b54c0" class="outline-2">
-<h2 id="org38b54c0">Publications</h2>
-<div class="outline-text-2" id="text-org38b54c0">
+<div id="outline-container-orgfd568ff" class="outline-1">
+<h1 id="orgfd568ff">Publications</h1>
+<div class="outline-text-1" id="text-orgfd568ff">
 </div>
-<div id="outline-container-org08e7776" class="outline-3">
-<h3 id="org08e7776">Nonparametric clustering of RNA‐sequencing data</h3>
-<div class="outline-text-3" id="text-org08e7776">
+<div id="outline-container-org03d190e" class="outline-2">
+<h2 id="org03d190e">Nonparametric clustering of RNA‐sequencing data</h2>
+<div class="outline-text-2" id="text-org03d190e">
 <p>
 Lozano, G., Atallah, N., &amp; Levine, M. (2023). Nonparametric clustering of RNA‐sequencing data. Statistical Analysis and Data Mining: The ASA Data Science Journal, 16(6), 547-559.
 </p>
@@ -66,9 +66,9 @@ Identification of clusters of co-expressed genes in transcriptomic data is a dif
 </p>
 </div>
 </div>
-<div id="outline-container-orgc315b5e" class="outline-3">
-<h3 id="orgc315b5e">Characterization of skin patterns in Pseudoplatystoma Magdaleniatum</h3>
-<div class="outline-text-3" id="text-orgc315b5e">
+<div id="outline-container-orge39751a" class="outline-2">
+<h2 id="orge39751a">Characterization of skin patterns in Pseudoplatystoma Magdaleniatum</h2>
+<div class="outline-text-2" id="text-orge39751a">
 <p>
 Lozano, G., Hernández, D., Chaves, N., Valderrama, M., Mojica, J., &amp; Gómez, F. (2017, December). Characterization of skin patterns in Pseudoplatystoma Magdaleniatum. In 2017 Sustainable Internet and ICT for Sustainability (SustainIT) (pp. 1-3). IEEE.
 </p>
